v050
  - support both Qt5 qnd Qt6 using the latest plugin_utils
  - properly save plugin app settings between launches

v040
  - add patch to fix image max-width when in two page spread mode

v031
  - simplify bug fix to use existing functions in reader.js

v030
  - bug fix to correct Toc navigation error as it needs opf relative paths

v020
  - added in plugin icons from BeckyEbook
  
v010
  - first public release of FuturePress EpubJSReader plugin for Sigil