@@ -5,7 +5,7 @@
 <author>Sigil</author>
 <description>Provide a FuturePress EpubJS Reader to view the current epub being edited</description>
 <engine>python3.4</engine>
-<version>0.5.0</version>
+<version>0.5.1</version>
 <autostart>true</autostart>
 <autoclose>true</autoclose>
 <oslist>osx,win,unx</oslist>
